// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should FavoriteButtonMain render correctly 1`] = `
<button
  className="-button--active -button button"
  onClick={[Function]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height=""
    width=""
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To bookmarks
  </span>
</button>
`;

exports[`Should FavoriteButtonRoom render correctly 1`] = `
<button
  className=" -button button"
  onClick={[Function]}
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height=""
    width=""
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To bookmarks
  </span>
</button>
`;
